# ocaml-empty-project

./: .ocamlformat  .ocamlinit  Makefile  README.md  dune-project  ocaml_empty_project.opam
lib/: dune  starter.ml
test/: dune
